Dealt with some error handling issues for downed network. Changed up flood to allow for a predefined amount of frames to be used with the --count option, as well as gave the user the ability to specifiy a delay within flood. Removed the --run-time option, I think with the updates I made to flood and with the already setup parameters around normal usage users will have very little need to do an actual time length based attack that they couldn't figure out how to do on their own. NO HAND HOLDING!

--- a/okeusstrike.1
+++ b/okeusstrike.1
@@ -58,14 +58,16 @@ OPTIONS
         Specifies that the deauthentication frames should be fragmented and will be fragmented based on a user supplied size in bytes.
 
     --random-frag
+        Automatically randomizes the fragmentation bits.
 
     --sequence <[1-4095]>
        Specifies the total number of fragmented frames to send from user input.
 
     --auto-seq
+        Automatically increments the sequence number.
 
-    --reason-code <[1-14]>
-        Specifies the reason code to use for the deauthentication frame, choices range from 1 to 14 inclusive.
+    --reason-code <[1-66]>
+        Specifies the reason code to use for the deauthentication frame, choices range from 1 to 66.
 
     --dry-run
         Conducts a dry run of the program, producing all output without actually sending any frames.
